Added Item Card and Some UI Changes

--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -4,13 +4,17 @@
     <title>{{title}}</title>
       <!-- Latest compiled and minified CSS -->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css">
+
 
 
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
     {{> header}}
-    {{{body}}}
+    <div class="container">
+        {{{body}}}
+    </div>
   </body>
 
   <script
