--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -8,20 +8,20 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Brand</a>
+            <a class="navbar-brand" href="#">Shopping Cart</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Shopping Cart</a></li>
+                <li><a href="#"><i class="fas fa-shopping-cart"></i>&nbsp;Shopping Cart</a></li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">User Management<span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fas fa-user"></i>&nbsp;User Management<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">User Accounts</a></li>
+                        <li><a href="#"><i class="fas fa-user"></i>&nbsp;User Accounts</a></li>
                         <li role="separator" class="divider"></li>
-                        <li><a href="#">Logout</a></li>
+                        <li><a href="#"><i class="fas fa-sign-out-alt"></i>&nbsp;</i>Logout</a></li>
                     </ul>
                 </li>
             </ul>
